# bazel_sysroot_library_and_libs_amd64

./: Makefile  Makefile.mk  README.md  build_bazel.nix  default.nix  flake.nix  generate_build_bazel.sh  old.default.nix  result  result-dev  sysroot_file_list.txt
bazel/: BUILD.bazel
sysroot/: BUILD.bazel
sysroot/lib/: libunwind.so.1.0
